--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,21 +57,24 @@ const { frontmatter } = Astro.props;
 	}
 	
 	h1 {
-	  @apply text-3xl font-bold mx-auto text-emerald-700 text-center m-4 mt-6; 
+	  @apply text-3xl font-bold mx-auto text-emerald-900 text-center m-4 mt-6; 
 	}
 	
 	h2 {
-	  @apply text-2xl font-bold mx-auto mt-6  text-emerald-700 text-center; 
+	  @apply text-2xl font-bold mx-auto mt-6  text-emerald-900 text-center; 
 	} 
 	
 	h3 {
-	  @apply text-xl mx-auto ml-2 mt-4 text-emerald-700 text-center; 
+	  @apply text-xl mx-auto ml-2 mt-4 text-emerald-900 text-center; 
 	}
 	
 	h4 {
 	  @apply text-center; 
 	}
 	
+	/*strong {
+		@apply text-emerald-700;
+	}*/
 
 	p {
 	  @apply mx-auto my-2 ;     
@@ -112,15 +115,15 @@ const { frontmatter } = Astro.props;
 	
 	
 	a {
-	  @apply text-emerald-600;  
+	  @apply text-emerald-900;  
 	}
   
 	a:hover {
-	  @apply text-emerald-800;
+	  @apply text-emerald-900;
 	}
 	
 	a:visited {
-	  @apply text-emerald-700; 
+	  @apply text-emerald-900; 
 	}
 	  
 	code {
