--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ const { frontmatter } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="The grassroots-level protocol." />
+		<meta name="description" content="A grassroots-level protocol." />
 		<meta name="viewport" content="width=device-width" />
 		<!--<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}/favicon.png`} />-->
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
